[package]
name = "thread-id"
version = "4.2.1"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2021"
description = "Get a unique thread ID"
documentation = "https://docs.rs/thread-id"
readme = "README.md"
repository = "https://github.com/ruuda/thread-id"
license = "MIT OR Apache-2.0"
keywords = ["thread", "pthread", "getcurrentthreadid"]
categories = ["api-bindings", "concurrency", "os"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.148"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = ["Win32_System_Threading"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.4.1"
